[project]
name = "agentic-ai-lang-chain"
version = "0.1.0"
description = ""
authors = [
    {name = "Roozbeh Ehsani",email = "ehsan010@umn.edu"}
]
readme = "README.md"
requires-python = "3.13.7"
dependencies = [
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-ollama (>=1.0.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "langchain-experimental (>=0.4.0,<0.5.0)",
    "langgraph (>=1.0.4,<2.0.0)"
]

[tool.poetry]
packages = [{include = "agentic_ai_lang_chain", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
